# zadala

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Procfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  zadala_config.py
.github/workflows/: django-cicd.yml
authentication/: aws_operations.py  custom_throttle.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_auth_provider.py
authentication/tests/: base_data.py  test_auth_api.py  test_auth_api_throttling.py
categories/: apps.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/tests/: test_categories_api.py
deployments/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
deployments/nginx/: default.conf
nginx/: default.conf
orders/: admin.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20210917_2012.py
orders/tests/: test_orders_api.py  test_tasks.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  (+5 more)
resources/: init_data.json
social_auth/: google.py  serializers.py  urls.py  views.py
templates/: invoice_email_template.html
zadalaAPI/: asgi.py  conftest.py  groups.py  init_data.json  manage.py  mypy.ini  permission.py  pytest.ini  settings.py  urls.py
(+51 files in other folders)
